# fastapi-ddd-template

./: .env.example  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  DDD_ARCHITECTURE_TEMPLATE.md  IMPLEMENTATION_TASKS.md  README.md  alembic.ini  create_admin_user.py  create_demo_users.py  pyproject.toml  seed_demo_users.py  setup.sh  setup_backend.py  stop-backend.sh  test_auth.py  test_db.py  test_direct_login.py  test_login_api.py  test_login_minimal.py  test_rbac.py
alembic/: env.py
docs/: batch-purchase-error-handling.md
scripts/: setup_rbac.py
src/: main.py
src/api/v1/: api.py
src/domain/entities/: __init__.py  inventory_unit.py  item_master.py  sku.py  stock_level.py  transaction_line.py  user.py
src/domain/repositories/: item_master_repository.py  item_repository.py  sku_repository.py  stock_level_repository.py
src/domain/value_objects/: __init__.py  item_type.py  transaction_type.py
src/infrastructure/database/: database.py
src/infrastructure/models/: __init__.py  auth_models.py  base.py  brand_model.py  category_model.py  customer_address_model.py  customer_contact_method_model.py  customer_model.py  inspection_report_model.py  inventory_unit_model.py  item_master_model.py  item_model.py  location_model.py  rental_return_line_model.py  rental_return_model.py  sku_model.py  stock_level_model.py  transaction_header_model.py  transaction_line_model.py  user.py
src/infrastructure/repositories/: inventory_unit_repository.py  item_master_repository.py  item_repository.py  permission_repository.py  role_repository.py  sku_repository.py  stock_level_repository.py  supplier_repository.py  (+3 more)
src/tests/: conftest.py
tests/integration/: test_batch_purchase_endpoints.py
(+89 files in other folders)
